fixing more margin for truncates

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,9 +57,9 @@ h6 {
 -------------------------------------------------- */
 
 .truncate {
-  margin-right: 25px;
+  margin-right: 30px;
   display: inline-block;
-  width: 170px;
+  width: 160px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
